--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href='css/styles.css' rel='stylesheet' type='text/css'>
     <script src="js/vue.js"></script>
     <script src="js/api.js"></script>
+    <script src="js/google-analytics-bundle.js"></script>
   </head>
   <body>
     <div id="app">
