remove toolbar class

--- a/web/index.html
+++ b/web/index.html
@@ -51,17 +51,12 @@
                 transform: rotate(360deg);
             }
         }
-        .toolbar {
-            background-color: #009688;
-            padding: 10px 0;
-        }
-
     </style>
 </head>
 <body>
     <app>
         <div style="text-align: center;">
-            <div class="toolbar" style="min-height: 36px;margin-bottom: 60px;">
+            <div style="min-height:36px;margin-bottom:60px;background-color:#009688;padding:10px 0;">
             </div>
             <div class="loader">Loading...</div>
         </div>
