--- a/web/index.html
+++ b/web/index.html
@@ -57,7 +57,7 @@
 <body>
     <app>
         <div style="text-align: center;">
-            <div style="min-height:36px;margin-bottom:60px;background-color:#009688;padding:10px 0;">
+            <div style="min-height:36px;margin-bottom:60px;background-color:#00796B;padding:10px 0;">
             </div>
             <div class="loader">Loading...</div>
         </div>
