--- a/web/index.html
+++ b/web/index.html
@@ -7,9 +7,8 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
     <link href='css/styles.css' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/png" href="img/icon-16.png">
-    <!--
+    <meta name="theme-color" content="#00695C">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    -->
     <style>
         .loader {
             margin: 60px auto;
@@ -57,7 +56,7 @@
 <body>
     <app>
         <div style="text-align: center;">
-            <div style="min-height:36px;margin-bottom:60px;background-color:#00796B;padding:10px 0;">
+            <div class="toolbar" style="min-height:36px;margin-bottom:60px;">
             </div>
             <div class="loader">Loading...</div>
         </div>
