--- a/web/index.html
+++ b/web/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>English Verbs</title>
+    <base href="/">
     <script async src="main.dart" type="application/dart"></script>
     <script async src="packages/browser/dart.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
-    <link href='css/styles.css' rel='stylesheet' type='text/css'>
+    <link href='/css/styles.css' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/png" href="img/icon-16.png">
     <meta name="theme-color" content="#00695C">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
