--- a/web/index.html
+++ b/web/index.html
@@ -64,12 +64,15 @@
         </div>
     </app>
     <script>
-        if ('serviceWorker' in navigator) {
+        if(window.location.hostname == 'localhost'){
+            console.info("Dev environment detected, service worker will not be loaded.");
+        }
+        else if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('/service-worker.js')
-                    .then(function(registration) {
-                        console.log('ServiceWorker registration successful with scope: ',    registration.scope);
-                    }).catch(function(err) {
-                console.log('ServiceWorker registration failed: ', err);
+            .then(function(registration) {
+                console.info('ServiceWorker registration successful with scope: ',    registration.scope);
+            }).catch(function(err) {
+                console.warn('ServiceWorker registration failed: ', err);
             });
         }
     </script>
