--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
     <meta name="theme-color" content="#00695C">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="manifest" href="manifest.json">
+    <meta name="google-site-verification" content="1Us7uefbW7e8Z2qwMS0LZKWqN0qFRs_cKxvE95mkSR4" />
     <style>
         .loader {
             margin: 60px auto;
