--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <script>
-window.location = "https://pub.dartlang.org/packages/usage?ref=gh-pages";
+window.location = "https://english-verbs.appspot.com?ref=gh-pages";
 </script>
+<a href="https://english-verbs.appspot.com?ref=gh-pages">This page has been moved to https://english-verbs.appspot.com</a>
